--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/config/database.config.ts",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d src/config/database.config.ts",
     "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/config/database.config.ts",
+    "migration:validate": "node scripts/validate-migrations.js",
+    "migration:check": "npm run migration:validate && typeorm-ts-node-commonjs migration:show -d src/config/database.config.ts",
     "seed": "ts-node -r tsconfig-paths/register src/database/seeds/index.ts",
     "deploy:setup": "node scripts/deploy-setup.js",
     "start:deploy": "npm run deploy:setup && npm run start:prod"
