--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "migration:validate": "node scripts/validate-migrations.js",
     "migration:check": "npm run migration:validate && typeorm-ts-node-commonjs migration:show -d src/config/database.config.ts",
     "seed": "ts-node -r tsconfig-paths/register src/database/seeds/index.ts",
+    "seed:run": "ts-node -r tsconfig-paths/register src/database/seeds/index.ts",
     "deploy:setup": "node scripts/deploy-setup.js",
     "start:deploy": "npm run deploy:setup && npm run start:prod"
   },
